More macro work (#441)
* Some more macro work

* Fix the banderout usage

* Lots more macrofication

* Encode macros

* More macros

* Various

* Tuples

* Macrofy merklisation

* PVM invocations macrofied

* PVM macrofied

* Clean up encoding syntax

* Clean up some caligraphic functions

* Zeropad cleanup

* Macrofy rest of the caligraphics

--- a/preamble.tex
+++ b/preamble.tex
@@ -91,8 +91,10 @@
 \newcommand*\remainder{\text{\hspace{2pt}\footnotesize{\textsf{R}}\hspace{2pt}}}
 \newcommand*\fold{\ \thicksim\mathchoice{\!\!\!\!\!\!\!}{\!\!\!\!\!\!}{\!\!\!\!\!\!}{\!\!\!\!\!\!}\int}
 \newcommand*{\order}[1]{\left[#1\right]}
-\newcommand*{\orderby}[2]{\left[#1\,\middle\lwavy\,#2\right]}
-\newcommand*{\orderuniqby}[2]{\left[#1\,\middle\lWavy\,#2\right]}
+\newcommand*{\orderby}[2]{#2\,\middle\lwavy\,#1}
+\newcommand*{\orderuniqby}[2]{#2\,\middle\lWavy\,#1}
+\newcommand*{\sqorderby}[2]{\sq{\orderby{#1}{#2}}}
+\newcommand*{\sqorderuniqby}[2]{\sq{\orderuniqby{#1}{#2}}}
 \newcommand*{\orderedin}{\ensuremath{\mathrel{\mathrlap{<}{\scalebox{0.95}[1]{$-$}}}}}
 % Encoding types with a length prefix
 \newcommand*{\var}[1]{\left\updownarrow#1\right.\!}
@@ -128,13 +130,14 @@
 \newcommand*{\is}[2]{#1\tricolon#2}
 \newcommand*{\isa}[2]{#1\in #2}
 \newcommand*{\sq}[1]{\left[#1\right]}
-\newcommand*{\seq}[1]{\left\lsem#1\right\rsem}
+\newcommand*{\sequence}[1]{\left\lsem#1\right\rsem}
+\newcommand*{\sequenceoflen}[2]{\sequence{#1}_{#2}} % sequence of fixed length
 \newcommand*{\set}[1]{\left\{\,#1\,\right\}}
 \newcommand*{\emset}{\left\{\right\}}
 \newcommand*{\protoset}[1]{\left\{\mkern-5mu\left[\,#1\,\right]\mkern-5mu\right\}}
 \newcommand*{\build}[2]{#1 \with #2}
 \newcommand*{\kv}[2]{\tup{#1 \mapsto #2}}
-\newcommand*{\keyval}[2]{\tuple{#1 \to #2}}
+\newcommand*{\keyvalue}[2]{\tuple{#1 \to #2}}
 
 % Typical operations.
 \newcommand*{\floor}[1]{\left\lfloor#1\right\rfloor}
@@ -145,6 +148,8 @@
 \newcommand*{\transpose}{{}^\text{T}}
 \newcommand*{\ang}[1]{\left\langle#1\right\rangle}
 \newcommand*{\sub}[1]{_{#1}}
+\newcommand*{\interval}[2]{_{#1 \dots #2}}
+\newcommand*{\subrange}[2]{_{#1 \dots+ #2}}
 \newcommand*{\subb}[1]{\left[#1\right]}
 \newcommand*{\cyclic}[1]{{#1}^\circlearrowleft}
 \newcommand*{\bracegroup}[1]{\left\{ #1 \right.}
@@ -166,59 +171,71 @@
 \newcommand*{\exc}{\text{ except }}
 
 % Special constants/functions (Upper caligraphic letters)
-\newcommand*{\mmrappend}{\mathcal{A}}
-\newcommand*{\octetstobits}{\mathcal{B}}
-\newcommand*{\erasurecode}{\mathcal{C}}
-\newcommand*{\se}{\mathcal{E}}
-\newcommand*{\de}{\mathcal{E}^{-1}}
-\newcommand*{\mmrencode}{\se_M}
-\newcommand*{\fyshuffle}{\mathcal{F}}
-\newcommand*{\blake}{\mathcal{H}}
-\newcommand*{\keccak}{\mathcal{H}_K}
-\newcommand*{\merklejustsubpath}{\mathcal{J}}
-\newcommand*{\keys}{\mathcal{K}}
-\newcommand*{\merklesubtreepage}{\mathcal{L}}
-\newcommand*{\merklizecd}{\mathcal{M}}
-\newcommand*{\merklizewb}{\mathcal{M}_B}
-\newcommand*{\merklizestate}{\mathcal{M}_\sigma}
-\newcommand*{\mmrsuperpeak}{\mathcal{M}_R}
-\newcommand*{\getringroot}{\mathcal{O}}
-\newcommand*{\zeropad}{\mathcal{P}}
-\newcommand*{\seqfromhash}{\mathcal{Q}}
-\newcommand*{\ecrecover}{\mathcal{R}}
-\newcommand*{\signdata}{\mathcal{S}}
+\newcommand*{\fnmmrappend}{\mathcal{A}}
+\newcommand*{\fnoctetstobits}{\mathcal{B}}
+\newcommand*{\fnerasurecode}{\mathcal{C}}
+\newcommand*{\fnencode}{\mathcal{E}}
+\newcommand*{\fnfixedencode}[1]{\fnencode_{#1}}
+\newcommand*{\fndecode}{\mathcal{E}^{-1}}
+\newcommand*{\fnfixeddecode}[1]{\fndecode_{#1}}
+\newcommand*{\fnmmrencode}{\fnencode_M}
+\newcommand*{\fnfyshuffle}{\mathcal{F}}
+\newcommand*{\fnblake}{\mathcal{H}}
+\newcommand*{\fnblakeprefix}[1]{\mathcal{H}_{#1}}
+\newcommand*{\fnkeccak}{\mathcal{H}_K}
+\newcommand*{\fnmerklejustsubpath}[1]{\mathcal{J}_{#1}}
+\newcommand*{\fnmerklesubtreepage}[1]{\mathcal{L}_{#1}}
+\newcommand*{\fnmerklizecd}{\mathcal{M}}
+\newcommand*{\fnmerklizewb}{\mathcal{M}_B}
+\newcommand*{\fnmerklizestate}{\mathcal{M}_\sigma}
+\newcommand*{\fnmmrsuperpeak}{\mathcal{M}_R}
+\newcommand*{\fngetringroot}{\mathcal{O}}
+\newcommand*{\fnzeropad}[1]{\mathcal{P}_{#1}}
+\newcommand*{\fnseqfromhash}[1]{\mathcal{Q}_{#1}}
+\newcommand*{\fnecrecover}{\mathcal{R}}
+\newcommand*{\fnsigndata}[1]{\mathcal{S}_{#1}}
+\newcommand*{\fnsubifnone}{\mathcal{U}}
+\newcommand*{\fnsext}[1]{\mathcal{X}_{#1}}
+\newcommand*{\fnbanderout}{\mathcal{Y}}
+\newcommand*{\fntosigned}[1]{\mathcal{Z}_{#1}}
 \newcommand*{\wallclock}{\mathcal{T}}
-\newcommand*{\subifnone}{\mathcal{U}}
-\newcommand*{\values}{\mathcal{V}}
-\newcommand*{\sext}{\mathcal{X}}
-\newcommand*{\banderout}{\mathcal{Y}}
-\newcommand*{\tosigned}{\mathcal{Z}}
 
-% F prefix implies these are "proper" latex functions, not just simple names.
-\newcommand*{\Fmmrappend}[1]{\mmrappend\left(#1\right)}
-\newcommand*{\Ferasurecode}[2][]{\erasurecode_{#1}\left(#2\right)}
-\newcommand*{\Ferasurecodeplex}[2][]{\erasurecode^\#_{#1}\left(#2\right)}
-\newcommand*{\Fmmrencode}[1]{\mmrencode\left(#1\right)}
-\newcommand*{\Ffyshuffle}[1]{\fyshuffle\left(#1\right)}
-\newcommand*{\Fmerklejustsubpath}[2]{\merklejustsubpath_{#1}\left(#2\right)}
-\newcommand*{\Fkeys}[1]{\keys\left(#1\right)}
-\newcommand*{\Fmerklesubtreepage}[2]{\merklesubtreepage_{#1}\left(#2\right)}
-\newcommand*{\Fmerklizecd}[1]{\merklizecd\left(#1\right)}
-\newcommand*{\Fmerklizewb}[1]{\merklizewb\left(#1\right)}
-\newcommand*{\Fmerklizestate}[1]{\merklizestate\left(#1\right)} % TODO: Make it take a parameter.
-\newcommand*{\Fmmrsuperpeak}[1]{\mmrsuperpeak\left(#1\right)}
-\newcommand*{\Fgetringroot}[1]{\getringroot\left(#1\right)}
-\newcommand*{\Fzeropad}[2]{\zeropad_{#1}\left(#2\right)}
-\newcommand*{\Fseqfromhash}[1]{\seqfromhash\left(#1\right)}
-\newcommand*{\Fecrecover}[1]{\ecrecover\left(#1\right)}
-\newcommand*{\Fsigndata}[2]{\signdata_{#1}\left(#2\right)}
-\newcommand*{\Fwallclock}{\wallclock}
-\newcommand*{\Fsubifnone}[1]{\subifnone\left(#1\right)} % TODO: Make it take a parameter.
-\newcommand*{\Fvalues}[1]{\values\left(#1\right)}
-\newcommand*{\Fsignext}[2]{\signext_{#1}\left(#2\right)}
-\newcommand*{\Fbanderout}[1]{\banderout\left(#1\right)}
-\newcommand*{\Ftosigned}[2]{\tosigned_{#1}\left(#2\right)}
-\newcommand*{\Ffromsigned}[2]{\fromsigned^{-1}_{#1}\left(#2\right)}
+\newcommand*{\encode}[1]{\fnencode\left(#1\right)}
+\newcommand*{\fixedencode}[2]{\fnfixedencode{#1}\left(#2\right)}
+\newcommand*{\decode}[1]{\fndecode\left(#1\right)}
+\newcommand*{\fixeddecode}[2]{\fnfixeddecode{#1}\left(#2\right)}
+\newcommand*{\mmrencode}[1]{\fnmmrencode\left(#1\right)}
+\newcommand*{\keys}[1]{\mathcal{K}\left(#1\right)}
+\newcommand*{\values}[1]{\mathcal{V}\left(#1\right)}
+\newcommand*{\blake}[1]{\fnblake\left(#1\right)}
+\newcommand*{\blakemany}[1]{\fnblake^\#\left(#1\right)}
+\newcommand*{\blakeprefix}[2]{\fnblakeprefix{#1}\left(#2\right)}
+\newcommand*{\keccak}[1]{\fnkeccak\left(#1\right)}
+\newcommand*{\mmrappend}[1]{\fnmmrappend\left(#1\right)}
+\newcommand*{\erasurecode}[2][]{\fnerasurecode_{#1}\left(#2\right)}
+\newcommand*{\erasurecodeplex}[2][]{\fnerasurecode^\#_{#1}\left(#2\right)}
+\newcommand*{\fyshuffle}[1]{\fnfyshuffle\left(#1\right)}
+\newcommand*{\merklejustsubpath}[2]{\fnmerklejustsubpath{#1}\left(#2\right)}
+\newcommand*{\merklesubtreepage}[2]{\fnmerklesubtreepage{#1}\left(#2\right)}
+\newcommand*{\merklizecd}[1]{\fnmerklizecd\left(#1\right)}
+\newcommand*{\merklizewb}[1]{\fnmerklizewb\left(#1\right)}
+\newcommand*{\merklizewbmany}[1]{\fnmerklizewb^\#\left(#1\right)}
+\newcommand*{\merklizestate}[1]{\fnmerklizestate\left(#1\right)}
+\newcommand*{\mmrsuperpeak}[1]{\fnmmrsuperpeak\left(#1\right)}
+\newcommand*{\getringroot}[1]{\fngetringroot\left(#1\right)}
+\newcommand*{\zeropad}[2]{\fnzeropad{#1}\left(#2\right)}
+\newcommand*{\seqfromhash}[2]{\fnseqfromhash{#1}\left(#2\right)}
+\newcommand*{\ecrecover}[1]{\fnecrecover\left(#1\right)}
+\newcommand*{\signdata}[2]{\fnsigndata{#1}\left(#2\right)}
+\newcommand*{\subifnone}[1]{\fnsubifnone\left(#1\right)}
+\newcommand*{\sext}[2]{\fnsext{#1}\left(#2\right)}
+\newcommand*{\banderout}[1]{\fnbanderout\left(#1\right)}
+\newcommand*{\signfunc}[1]{\fntosigned{#1}}
+\newcommand*{\unsignfunc}[1]{\signfunc{#1}^{-1} }
+\newcommand*{\signed}[1]{\signedn{8}{#1}}
+\newcommand*{\unsigned}[1]{\unsignedn{8}{#1}}
+\newcommand*{\signedn}[2]{\signfunc{#1}(#2)}
+\newcommand*{\unsignedn}[2]{\unsignfunc{#1}(#2)}
 
 % Constants (Sans-serif upper letters)
 \newcommand*{\corecount}{\mathsf{C}}
@@ -232,13 +249,14 @@
 \newcommand*{\accpar}{\Delta_*}
 \newcommand*{\accseq}{\Delta_+}
 \newcommand*{\histlookup}{\Lambda}
-\newcommand*{\computedigest}{\Xi}
+\newcommand*{\computereport}{\Xi}
 \newcommand*{\transitionstate}{\Upsilon}
 
 %%%%%%%%%%%%
 % Named types (blackboard letters)
 \newcommand*{\serviceaccount}{\mathbb{A}}
 \newcommand*{\bitstring}{\mathbb{B}}
+\newcommand*{\bitstringoflen}[1]{\mathbb{B}_{#1}}
 \newcommand*{\safroleticket}{\mathbb{C}}
 \newcommand*{\dictionary}{\mathbb{D}}
 \newcommand*{\dict}[2]{\dictionary\anglebar{#1\to#2}}
@@ -262,13 +280,14 @@
 % R unused
 \newcommand*{\avspec}{\mathbb{S}}
 \newcommand*{\defxfer}{\mathbb{T}}
-\newcommand*{\defxfers}{\seq\defxfer}
+\newcommand*{\defxfers}{\sequence\defxfer}
 \newcommand*{\partialstate}{\mathbb{U}}
 \newcommand*{\readable}[1]{\mathbb{V}_{#1}}
 \newcommand*{\writable}[1]{\mathbb{V}^*_{#1}}
 \newcommand*{\workreport}{\mathbb{W}}
 \newcommand*{\workcontext}{\mathbb{X}}
 \newcommand*{\blob}{\mathbb{Y}}
+\newcommand*{\bloboflen}[1]{\mathbb{Y}_{#1}}
 \newcommand*{\Z}{\mathbb{Z}}
 
 %%%%%%%%%%%%
@@ -279,11 +298,14 @@
 \newcommand*{\bloblength}{\N_L}
 \newcommand*{\gas}{\N_G}
 \newcommand*{\signedgas}{\Z_G}
-\newcommand*{\coreindex}{\N_\corecount}
-\newcommand*{\valindex}{\N_\valcount}
-\newcommand*{\ticketentryindex}{\N_\ticketentries}
-\newcommand*{\epochindex}{\N_\epochlen}
-\newcommand*{\Nbits}[1]{\N_{2^{#1}}}
+\newcommand*{\Nmax}[1]{\N_{#1}}
+\newcommand*{\Nclamp}[2]{\N_{#1 \dots #2}}
+\newcommand*{\Nrange}[2]{\N_{#1 \dots+ #2}}
+\newcommand*{\Nbits}[1]{\Nmax{2^{#1}}}
+\newcommand*{\coreindex}{\Nmax{\corecount}}
+\newcommand*{\valindex}{\Nmax{\valcount}}
+\newcommand*{\ticketentryindex}{\Nmax{\ticketentries}}
+\newcommand*{\epochindex}{\Nmax{\epochlen}}
 
 %%%%%%%%%%%%
 % Hash & blob specializations
@@ -291,10 +313,10 @@
 \newcommand*{\zerohash}{\hash_0}
 \newcommand*{\edkey}{\hash_E}
 \newcommand*{\bskey}{\hash_B}
-\newcommand*{\keccakoutput}{\hash_K}
-\newcommand*{\blskey}{\blob_L}
-\newcommand*{\metadatakey}{\blob_{128}}
-\newcommand*{\ringroot}{\blob_R}
+\newcommand*{\fnkeccakoutput}{\hash_K}
+\newcommand*{\blskey}{\bloboflen{L}}
+\newcommand*{\metadatakey}{\bloboflen{128}}
+\newcommand*{\ringroot}{\bloboflen{R}}
 
 %%%%%%%%%%%%
 % FIELDS
@@ -315,19 +337,23 @@
 \newcommand*{\¬codehash}{h} % O/L \ot¬packagehash
 \newcommand*{\¬exportcount}{e}
 \newcommand*{\¬importcount}{i}
+\newcommand*{\¬xtcount}{x}
+\newcommand*{\¬xtsize}{z}
 \newcommand*{\¬workreport}{w}
 \newcommand*{\¬offender}{k}
 \newcommand*{\¬validity}{v}
 \newcommand*{\¬reporthash}{r}
 \newcommand*{\¬signature}{s}
+\newcommand*{\¬entry}{r} % TODO: Rename to entryindex
 
 %%%%%%%%%%%%
 % Named types (blackboard)
 
 % TODO make this local.
 %\newcommand*{\safroleticket}{\mathbb{C}}
+\newcommand*{\stX}{x}
 \newcommand*{\st¬id}{y}
-\newcommand*{\st¬entry}{r}
+\newcommand*{\st¬entry}{\¬entry}
 
 %\newcommand*{\ram}{\mathbb{M}}
 \newcommand*{\ram¬value}{\mathbf{V}}
@@ -360,10 +386,10 @@
 \newcommand*{\wr¬context}{x} % TODO: Make bold like package. Consider renaming to \mathbf{c}
 \newcommand*{\wr¬core}{\¬core}
 \newcommand*{\wr¬authorizer}{\¬authorizer}
-\newcommand*{\wr¬srlookup}{\mathbf{l}}
-\newcommand*{\wr¬authtrace}{\¬authtrace} % TODO: Consider renaming to \mathbf{u} to free up \mathbf{o}
-\newcommand*{\wr¬digests}{\mathbf{r}} % TODO: Consider renaming to \mathbf{t}/{g} avoid overloading \mathbf{r} reports vs results; maybe \mathbf{t} for results
 \newcommand*{\wr¬authgasused}{g}
+\newcommand*{\wr¬authtrace}{\¬authtrace} % TODO: Consider renaming to \mathbf{u} to free up \mathbf{o}
+\newcommand*{\wr¬srlookup}{\mathbf{l}}
+\newcommand*{\wr¬digests}{\mathbf{r}} % TODO: Consider renaming to \mathbf{t}/{g} avoid overloading \mathbf{r} reports vs results; maybe \mathbf{t} for results
 % TODO: Standardize and fully check this:
 % p P: work Packages
 % w I: work Items
@@ -373,18 +399,19 @@
 % y: work payload
 
 %\newcommand*{\workdigest}{\mathbb{L}}
-\newcommand*{\wl¬service}{\¬service}
-\newcommand*{\wl¬codehash}{\¬codehash}
-\newcommand*{\wl¬payloadhash}{\¬payloadhash}
-\newcommand*{\wl¬gaslimit}{\¬gaslimit}
-\newcommand*{\wl¬result}{\¬result}
-\newcommand*{\wl¬gasused}{\¬gasused}
-\newcommand*{\wl¬importcount}{\¬importcount}
-\newcommand*{\wl¬xtcount}{x}
-\newcommand*{\wl¬xtsize}{z}
-\newcommand*{\wl¬exportcount}{\¬exportcount}
+\newcommand*{\wd¬service}{\¬service}
+\newcommand*{\wd¬codehash}{\¬codehash}
+\newcommand*{\wd¬payloadhash}{\¬payloadhash}
+\newcommand*{\wd¬gaslimit}{\¬gaslimit}
+\newcommand*{\wd¬gasused}{\¬gasused}
+\newcommand*{\wd¬importcount}{\¬importcount}
+\newcommand*{\wd¬xtcount}{\¬xtcount}
+\newcommand*{\wd¬xtsize}{\¬xtsize}
+\newcommand*{\wd¬exportcount}{\¬exportcount}
+\newcommand*{\wd¬result}{\¬result}
 
 %\newcommand*{\operandtuple}{\mathbb{O}}
+\newcommand{\otX}{x}
 \newcommand*{\ot¬packagehash}{h} % O/L ¬codehash TODO: RENAME to k
 \newcommand*{\ot¬segroot}{e} % O/L ¬exportcount TODO: RENAME to r?
 \newcommand*{\ot¬authorizer}{\¬authorizer}
@@ -394,6 +421,8 @@
 \newcommand*{\ot¬result}{\¬result}
 
 %\newcommand*{\avspec}{\mathbb{S}}
+\newcommand*{\asX}{x}
+% TODO: Is it \as¬packagehash or \as¬bundlehash? Unclear whether this was changed to the hash of the work-package bundle or still the hash of the work-package itself.
 \newcommand*{\as¬packagehash}{h}
 \newcommand*{\as¬bundlelen}{l}
 \newcommand*{\as¬erasureroot}{u}
@@ -403,14 +432,16 @@
 % TODO: Move \mathbf{p} from here into the \workreport and work-package - it's really not part of the context.
 
 %\newcommand*{\workcontext}{\mathbb{X}}
-\newcommand*{\cx¬anchorhash}{a}
-\newcommand*{\cx¬anchorpoststate}{s}
-\newcommand*{\cx¬anchoraccoutlog}{b}
-\newcommand*{\cx¬lookupanchorhash}{l}
-\newcommand*{\cx¬lookupanchortime}{t}
-\newcommand*{\cx¬prerequisites}{\mathbf{p}}
+\newcommand*{\wcX}{x}
+\newcommand*{\wc¬anchorhash}{a}
+\newcommand*{\wc¬anchorpoststate}{s}
+\newcommand*{\wc¬anchoraccoutlog}{b}
+\newcommand*{\wc¬lookupanchorhash}{l}
+\newcommand*{\wc¬lookupanchortime}{t}
+\newcommand*{\wc¬prerequisites}{\mathbf{p}}
 
 %\newcommand*{\serviceaccount}{\mathbb{A}}
+\newcommand*{\saX}{\mathbf{a}}
 \newcommand*{\sa¬storage}{\mathbf{s}}
 \newcommand*{\sa¬preimages}{\mathbf{p}}
 \newcommand*{\sa¬requests}{\mathbf{l}}
@@ -431,6 +462,7 @@
 
 % Fields of deferred transfer.
 %\newcommand*{\defxfer}{\mathbb{T}}
+\newcommand*{\dxX}{x}
 \newcommand*{\dx¬source}{s}
 \newcommand*{\dx¬dest}{d}
 \newcommand*{\dx¬amount}{a}
@@ -443,7 +475,7 @@
 \newcommand*{\vk¬ed}{e}
 \newcommand*{\vk¬bls}{L}  % TODO: Rename to be a single letter.
 \newcommand*{\vk¬metadata}{m}
-\newcommand*{\allvalkeys}{\seq{\valkey}_{\valcount}}
+\newcommand*{\allvalkeys}{\sequence{\valkey}_{\valcount}}
 
 % Fields of partial state \mathbb{U}.
 \newcommand*{\ps¬accounts}{\mathbf{d}}
@@ -454,6 +486,34 @@
 \newcommand*{\ps¬delegator}{v}
 \newcommand*{\ps¬alwaysaccers}{\mathbf{z}}
 
+% Fields of core statistics (\corestats)
+\newcommand*{\cs¬daload}{d}
+\newcommand*{\cs¬popularity}{p}
+\newcommand*{\cs¬importcount}{\¬importcount}
+\newcommand*{\cs¬xtcount}{\¬xtcount}
+\newcommand*{\cs¬xtsize}{\¬xtsize}
+\newcommand*{\cs¬exportcount}{\¬exportcount}
+\newcommand*{\cs¬bundlelen}{b} % TODO: Rename to l and dedupe
+\newcommand*{\cs¬gasused}{\¬gasused}
+
+% Fields of service statistics (\servicestats)
+\newcommand*{\ss¬provision}{p}
+\newcommand*{\ss¬refinement}{r}
+\newcommand*{\ss¬accumulation}{a}
+\newcommand*{\ss¬xferral}{t}
+\newcommand*{\ss¬importcount}{\¬importcount}
+\newcommand*{\ss¬xtcount}{\¬xtcount}
+\newcommand*{\ss¬xtsize}{\¬xtsize}
+\newcommand*{\ss¬exportcount}{\¬exportcount}
+
+% Fields of validator statistics (\valstats*)
+\newcommand*{\vs¬blocks}{b}
+\newcommand*{\vs¬tickets}{t}
+\newcommand*{\vs¬preimagecount}{p}
+\newcommand*{\vs¬preimagesize}{d}
+\newcommand*{\vs¬guarantees}{g}
+\newcommand*{\vs¬assurances}{a}
+
 %%%%%%%%%%%%
 % State item tuples (fields of lower-greek letters)
 
@@ -463,10 +523,23 @@
 
 % Used for \recenthistory
 \newcommand*{\rh¬headerhash}{h}
-\newcommand*{\rh¬stateroot}{s}
 \newcommand*{\rh¬accoutlogsuperpeak}{b}
+\newcommand*{\rh¬stateroot}{s}
 \newcommand*{\rh¬reportedpackagehashes}{\mathbf{p}}
 
+
+
+%%%%%%%%%%%%
+% Standard iterators for the tuples
+
+\newcommand*{\wpX}{p}
+\newcommand*{\wiX}{w} % TODO: consider change to i
+\newcommand*{\wrX}{r}
+\newcommand*{\wdX}{d}
+\newcommand*{\xgX}{g}
+\newcommand*{\vkX}{k}
+\newcommand*{\cX}{c}
+\newcommand*{\wrcX}{\tup{\wrX, \cX}}
 
 
 %%%%%%%%%%%%
@@ -480,13 +553,14 @@
 \newcommand*{\ancestors}{\mathbf{A}}
 \newcommand*{\theancestors}{\ancestors}
 
-\newcommand*{\guarantorassignments}{\mathbf{G}}
-\newcommand*{\guarantorassignmentsunderlastrotation}{\mathbf{G}^*}
-\newcommand*{\accumulationstatistics}{\mathbf{I}}
-\newcommand*{\reporters}{\mathbf{R}}
+\newcommand*{\guarantorassignments}{\mathbf{M}}
+\newcommand*{\guarantorassignmentsunderlastrotation}{\mathbf{M}^*}
+\newcommand*{\accumulationstatistics}{\mathbf{S}}
+\newcommand*{\reporters}{\mathbf{G}}
+\newcommand*{\incomingreports}{\mathbf{I}}
+\newcommand*{\justbecameavailable}{\mathbf{R}}
 \newcommand*{\isticketed}{\mathbf{T}}
 \newcommand*{\isaudited}{\mathbf{U}}
-\newcommand*{\justbecameavailable}{\mathbf{W}} % TODO: Rename $\justbecameavailable$ to \mathbf{V} or whatever and `\mathbf{w}` becomes `\reporters` and `\reporters` becomes `\mathbf{G}`. `\mathbf{G}` would become something else.
 \newcommand*{\deferredtransfersstatistics}{\mathbf{X}}
 
 % Extrinsics.
@@ -503,6 +577,12 @@
 \newcommand*{\xtpreimages}{\XT_P}
 \newcommand*{\xtguarantees}{\XT_G}
 
+\newcommand*{\encodetickets}[1]{\fnencode_T\left(#1\right)}
+\newcommand*{\encodepreimages}[1]{\fnencode_P\left(#1\right)}
+\newcommand*{\encodeguarantees}[1]{\fnencode_G\left(#1\right)}
+\newcommand*{\encodeassurances}[1]{\fnencode_A\left(#1\right)}
+\newcommand*{\encodedisputes}[1]{\fnencode_D\left(#1\right)}
+
 \newcommand*{\xa¬anchor}{a}
 \newcommand*{\xa¬availabilities}{f}
 \newcommand*{\xa¬assurer}{v}
@@ -511,6 +591,12 @@
 \newcommand*{\xg¬workreport}{\¬workreport}
 \newcommand*{\xg¬timeslot}{t}
 \newcommand*{\xg¬credential}{a}
+
+\newcommand*{\xp¬service}{\¬service}
+\newcommand*{\xp¬data}{\mathbf{p}} % TODO: Consider using mathbf{d}
+
+\newcommand*{\xt¬entry}{\¬entry}
+\newcommand*{\xt¬proof}{p}
 
 \newcommand*{\xv¬reporthash}{\¬reporthash}
 \newcommand*{\xv¬epochindex}{a}
@@ -532,7 +618,8 @@
 % Headers.
 \newcommand*{\header}{\mathbf{H}}
 \newcommand*{\theheader}{\header} % "THE header" is overloaded with "prototype header" for now.
-\newcommand*{\seunsignedheader}{\mathcal{E}_U}
+\newcommand*{\fnencodeunsignedheader}{\mathcal{E}_U}
+\newcommand*{\encodeunsignedheader}[1]{\fnencodeunsignedheader\left(#1\right)}
 \newcommand*{\parentheader}[1]{{#1}^-}
 \newcommand*{\genesisheader}{\header^0}
 \renewcommand*{\H}{\theheader} % short-hand for \theheader, used in equations when subscripting to a field.
