--- a/text/bandersnatch.tex
+++ b/text/bandersnatch.tex
@@ -5,16 +5,16 @@ The Bandersnatch curve is defined by \cite{cryptoeprint:2021/1152}.
 The singly-contextualized Bandersnatch Schnorr-like signatures $\bandersig{k}{c}{m}$ are defined as a formulation under the \emph{IETF} \textsc{vrf} template specified by \cite{hosseini2024bandersnatch} (as IETF VRF) and further detailed by \cite{rfc9381}.
 
 \begin{align}
-  \bandersig{k \in \bskey}{c \in \hash}{m \in \blob} \subset \blob_{96} &\equiv \set{ x \mid x \in \blob_{96}, \text{verify}(k, c, m, x) = \top }  \\
-  \banderout{s \in \bandersig{k}{c}{m}} \in \hash &\equiv \text{output}(x \mid x \in \bandersig{k}{c}{m})_{\dots32}
+  \bandersig{k \in \bskey}{c \in \hash}{m \in \blob} \subset \bloboflen{96} &\equiv \set{ x \mid x \in \bloboflen{96}, \text{verify}(k, c, m, x) = \top }  \\
+  \banderout{s \in \bandersig{k}{c}{m}} \in \hash &\equiv \text{output}(x \mid x \in \bandersig{k}{c}{m})\interval{}{32}
 \end{align}
 
 The singly-contextualized Bandersnatch Ring\textsc{vrf} proofs $\bandersnatch{r}{c}{m}$ are a zk-\textsc{snark}-enabled analogue utilizing the Pedersen \textsc{vrf}, also defined by \cite{hosseini2024bandersnatch} and further detailed by \cite{cryptoeprint:2023/002}.
 
 \begin{align}
-  \getringroot(\seq{\bskey}) \in \ringroot &\equiv \text{commit}(\seq{\bskey})  \\
-  \bandersnatch{r \in \ringroot}{c \in \hash}{m \in \blob} \subset \blob_{784} &\equiv \set{ x \mid x \in \blob_{784}, \text{verify}(r, c, m, x) = \top }  \\
-  \banderout{p \in \bandersnatch{r}{c}{m}} \in \hash &\equiv \text{output}(x \mid x \in \bandersnatch{r}{c}{m})_{\dots32}
+  \getringroot{\sequence{\bskey}} \in \ringroot &\equiv \text{commit}(\sequence{\bskey})  \\
+  \bandersnatch{r \in \ringroot}{c \in \hash}{m \in \blob} \subset \bloboflen{784} &\equiv \set{ x \mid x \in \bloboflen{784}, \text{verify}(r, c, m, x) = \top }  \\
+  \banderout{p \in \bandersnatch{r}{c}{m}} \in \hash &\equiv \text{output}(x \mid x \in \bandersnatch{r}{c}{m})\interval{}{32}
 \end{align}
 
 Note that in the case a key $\bskey$ has no corresponding Bandersnatch point when constructing the ring, then the Bandersnatch \emph{padding point} as stated by \cite{hosseini2024bandersnatch} should be substituted.
