--- a/text/accounts.tex
+++ b/text/accounts.tex
@@ -13,7 +13,7 @@ The service account is defined as the tuple of storage dictionary $\sa¬storage$
   \serviceaccount \equiv \tuple{\ \begin{aligned}
     \sa¬storage &\in \dict{\blob}{\blob}\,,\ 
     \sa¬preimages \in \dict{\hash}{\blob}\,,\\
-    \sa¬requests &\in \dict{\tuple{\hash,\bloblength}}{\seq{\timeslot}_{:3}}\,,\\
+    \sa¬requests &\in \dict{\tuple{\hash,\bloblength}}{\sequence{\timeslot}_{:3}}\,,\\
     \sa¬gratis &\in \balance\,,\ 
     \sa¬codehash \in \hash\,,\ 
     \sa¬balance \in \balance\,,\ 
@@ -40,7 +40,7 @@ Thus, the balance of the service of index $s$ would be denoted $\accounts\subb{s
 The code and associated metadata of a service account is identified by a hash which, if the service is to be functional, must be present within its preimage lookup (see section \ref{sec:lookups}) and have a preimage which is a proper encoding of the two blobs. We thus define the actual code $\sa¬code$ and metadata $\sa¬metadata$:
 \begin{align}
   \forall \mathbf{a} \in \serviceaccount : \tup{\mathbf{a}_\sa¬metadata, \mathbf{a}_\sa¬code} \equiv \begin{cases}
-    \tup{\mathbf{m}, \mathbf{c}} &\when \se(\var{\mathbf{m}}, \mathbf{c}) = \mathbf{a}_\sa¬preimages[\mathbf{a}_\sa¬codehash] \\
+    \tup{\mathbf{m}, \mathbf{c}} &\when \encode{\var{\mathbf{m}}, \mathbf{c}} = \mathbf{a}_\sa¬preimages[\mathbf{a}_\sa¬codehash] \\
     \tup{\none, \none} &\otherwise
   \end{cases}
 \end{align}
@@ -81,8 +81,8 @@ Restated, we must be able to define some \emph{historical} lookup function $\his
 \begin{equation}
 \begin{aligned}
   \histlookup\colon \abracegroup[\ ]{
-    (\serviceaccount, \N_{\H_\¬timeslot - \mathsf{D} \dots \H_\¬timeslot}, \hash) &\to \optional{\blob} \\
-    (\mathbf{a}, t, \blake(\mathbf{p})) &\mapsto v : v \in \set{ \mathbf{p}, \none }
+    \tuple{\serviceaccount, \Nmax{\H_\¬timeslot - \mathsf{D} \dots \H_\¬timeslot}, \hash} &\to \optional{\blob} \\
+    (\mathbf{a}, t, \blake{\mathbf{p}}) &\mapsto v : v \in \set{ \mathbf{p}, \none }
   }
 \end{aligned}
 \end{equation}
@@ -96,18 +96,18 @@ The preimage lookup for some service of index $s$ is denoted $\accounts\subb{s}_
 The state of the lookup system naturally satisfies a number of invariants. Firstly, any preimage value must correspond to its hash, equation \ref{eq:preimageconstraints}. Secondly, a preimage value being in state implies that its hash and length pair has some associated status, also in equation \ref{eq:preimageconstraints}. Formally:
 \begin{equation}\label{eq:preimageconstraints}
   \forall \mathbf{a} \in \serviceaccount, \kv{h}{\mathbf{d}} \in \mathbf{a}_\sa¬preimages \Rightarrow
-    h = \blake(\mathbf{d})\wedge
-    \tup{h , \len{\mathbf{d}}} \in \Fkeys{\mathbf{a}_\sa¬requests}
+    h = \blake{\mathbf{d}}\wedge
+    \tup{h , \len{\mathbf{d}}} \in \keys{\mathbf{a}_\sa¬requests}
 \end{equation}
 
 \subsubsection{Semantics}
 
-The historical status component $h \in \seq{\timeslot}_{:3}$ is a sequence of up to three time slots and the cardinality of this sequence implies one of four modes:
+The historical status component $h \in \sequence{\timeslot}_{:3}$ is a sequence of up to three time slots and the cardinality of this sequence implies one of four modes:
 \begin{itemize}
-  \item{$h = \seq{}$}: The preimage is \emph{requested}, but has not yet been supplied.
-  \item{$h \in \seq{\timeslot}_1$}: The preimage is \emph{available} and has been from time $h_0$.
-  \item{$h \in \seq{\timeslot}_2$}: The previously available preimage is now \emph{unavailable} since time $h_1$. It had been available from time $h_0$.
-  \item{$h \in \seq{\timeslot}_3$}: The preimage is \emph{available} and has been from time $h_2$. It had previously been available from time $h_0$ until time $h_1$.
+  \item{$h = \sequence{}$}: The preimage is \emph{requested}, but has not yet been supplied.
+  \item{$h \in \sequence{\timeslot}_1$}: The preimage is \emph{available} and has been from time $h_0$.
+  \item{$h \in \sequence{\timeslot}_2$}: The previously available preimage is now \emph{unavailable} since time $h_1$. It had been available from time $h_0$.
+  \item{$h \in \sequence{\timeslot}_3$}: The preimage is \emph{available} and has been from time $h_2$. It had previously been available from time $h_0$ until time $h_1$.
 \end{itemize}
 
 The historical lookup function $\histlookup$ may now be defined as:
@@ -115,7 +115,7 @@ The historical lookup function $\histlookup$ may now be defined as:
   \begin{aligned}\label{eq:historicallookup}
     &\histlookup\colon \tuple{\serviceaccount, \timeslot, \hash} \to \optional{\blob} \\
     &\histlookup(\mathbf{a}, t, h) \equiv \begin{cases}
-      \mathbf{a}_\sa¬preimages\subb{h}\!\!\!\! &\when h \in \Fkeys{\mathbf{a}_\sa¬preimages} \wedge I(\mathbf{a}_\sa¬requests\subb{h, \len{\mathbf{a}_\sa¬preimages\subb{h}}}, t) \!\!\!\!\! \\
+      \mathbf{a}_\sa¬preimages\subb{h}\!\!\!\! &\when h \in \keys{\mathbf{a}_\sa¬preimages} \wedge I(\mathbf{a}_\sa¬requests\subb{h, \len{\mathbf{a}_\sa¬preimages\subb{h}}}, t) \!\!\!\!\! \\
       \none &\otherwise
     \end{cases}\\
     &\where I(\mathbf{l}, t) = \begin{cases}
@@ -141,11 +141,11 @@ Furthermore, as we will see in the account serialization function in section \re
 
 We may then define a third dependent term $\sa¬minbalance$, the minimum, or \emph{threshold}, balance needed for any given service account in terms of its storage footprint.
 \begin{align}
-  \forall \mathbf{a} \in \Fvalues{\accounts}\colon \abracegroup{
+  \forall \mathbf{a} \in \values{\accounts}\colon \abracegroup{
     \mathbf{a}_\sa¬items \in \Nbits{32} &\equiv
       2\cdot\len{\,\mathbf{a}_\sa¬requests\,} + \len{\,\mathbf{a}_\sa¬storage\,} \\
     \mathbf{a}_\sa¬octets \in \Nbits{64} &\equiv
-      \sum\limits_{\,\tup{h, z} \in \Fkeys{\mathbf{a}_\sa¬requests}\,} \!\!\!\!81 + z \\
+      \sum\limits_{\,\tup{h, z} \in \keys{\mathbf{a}_\sa¬requests}\,} \!\!\!\!81 + z \\
     &\phantom{\equiv\ } + \sum\limits_{\tup{x, y} \in \mathbf{a}_\sa¬storage} 34 + \len{y} + \len{x} \\
     \mathbf{a}_\sa¬minbalance \in \balance &\equiv
       \max(0,
@@ -167,7 +167,7 @@ Finally, $\alwaysaccers$ is a small dictionary containing the indices of service
 \begin{align}
   \privileges \equiv \tuple{
     \isa{\manager}{\serviceid} ,
-    \isa{\assigners}{\seq{\serviceid}_\corecount} ,
+    \isa{\assigners}{\sequence{\serviceid}_\corecount} ,
     \isa{\delegator}{\serviceid} ,
     \isa{\alwaysaccers}{\dict{\serviceid}{\gas}}
   }
