--- a/text/auditing.tex
+++ b/text/auditing.tex
@@ -30,54 +30,56 @@ All items in the work-package specification field of the work-report should be r
 
 Each validator shall perform auditing duties on each valid block received. Since we are entering off-chain logic, and we cannot assume consensus, we henceforth consider ourselves a specific validator of index $v$ and assume ourselves focused on some recent block $\block$ with other terms corresponding to the state-transition implied by that block, so $\reports$ is said block's prior core-allocation, $\activeset$ is its prior validator set, $\header$ is its header \etc Practically, all considerations must be replicated for all blocks and multiple blocks' considerations may be underway simultaneously.
 
-\newcommand*{\auditreports}{\mathbf{q}}
+\newcommand*{\local¬reports}{\mathbf{q}}
+\newcommand*{\local¬seed}{s}
+\newcommand*{\local¬tranche}{\mathbf{a}}
 
-We define the sequence of work-reports which we may be required to audit as $\auditreports$, a sequence of length equal to the number of cores, which functions as a mapping of core index to a work-report pending which has just become available, or $\none$ if no report became available on the core. Formally:
+We define the sequence of work-reports which we may be required to audit as $\local¬reports$, a sequence of length equal to the number of cores, which functions as a mapping of core index to a work-report pending which has just become available, or $\none$ if no report became available on the core. Formally:
 \begin{align}\label{eq:auditselection}
-  \auditreports &\in \seq{\optional{\workreport}}_\corecount \\
-  \auditreports &\equiv \sq{\build{
+  \local¬reports &\in \sequence{\optional{\workreport}}_\corecount \\
+  \local¬reports &\equiv \sq{\build{
     \begin{rcases}
-      \reports\subb{c}_\rs¬workreport &\when \reports\subb{c}_\rs¬workreport \in \justbecameavailable \\
+      \reports\subb{\cX}_\rs¬workreport &\when \reports\subb{\cX}_\rs¬workreport \in \justbecameavailable \\
       \none &\otherwise
     \end{rcases}
   }{
-    c \orderedin \coreindex
+    \cX \orderedin \coreindex
   }}
 \end{align}
 
-We define our initial audit tranche in terms of a verifiable random quantity $s_0$ created specifically for it:
+We define our initial audit tranche in terms of a verifiable random quantity $\local¬seed\sub{0}$ created specifically for it:
 \begin{align}
-  s_0 &\in \bandersig{\activeset[v]_\vk¬bs}{\mathsf{X}_U \concat \banderout(\H_\¬vrfsig)}{[]} \\
+  \local¬seed\sub{0} &\in \bandersig{\activeset[v]_\vk¬bs}{\mathsf{X}_U \concat \banderout{\H_\¬vrfsig}}{\sq{}} \\
   \mathsf{X}_U &= \token{\$jam\_audit}
 \end{align}
 
-We may then define $\mathbf{a}_0$ as the non-empty items to audit through a verifiably random selection of ten cores:
+We may then define $\local¬tranche\sub{0}$ as the non-empty items to audit through a verifiably random selection of ten cores:
 \begin{align}
-  \mathbf{a}_0 &= \set{\build{\tup{c, w}}{\tup{c, w} \in \mathbf{p}_{\dots+10}, w \ne \none}} \\
-  \where \mathbf{p} &= \Ffyshuffle{\sq{\build{\tup{c, \auditreports_c}}{c \orderedin \coreindex}}, r} \\
-  \also r &= \Fbanderout{s_0}
+  \local¬tranche\sub{0} &= \set{\build{\wrcX}{\wrcX \in \mathbf{p}\subrange{}{10}, \wrX \ne \none}} \\
+  \where \mathbf{p} &= \fyshuffle{\sq{\build{\tup{\cX, \local¬reports\sub{\cX}}}{\cX \orderedin \coreindex}}, \banderout{\local¬seed\sub{0}}} \\
 \end{align}
 
-Every $\mathsf{A} = 8$ seconds following a new time slot, a new tranche begins, and we may determine that additional cores warrant an audit from us. Such items are defined as $\mathbf{a}_n$ where $n$ is the current tranche. Formally:
+Every $\mathsf{A} = 8$ seconds following a new time slot, a new tranche begins, and we may determine that additional cores warrant an audit from us. Such items are defined as $\local¬tranche\sub{n}$ where $n$ is the current tranche. Formally:
 \begin{equation}
   \using n = \ffrac{\wallclock - \mathsf{P}\cdot\H_\¬timeslot}{\mathsf{A}}
 \end{equation}
 
-New tranches may contain items from $\auditreports$ stemming from one of two reasons: either a negative judgment has been received; or the number of judgments from the previous tranche is less than the number of announcements from said tranche. In the first case, the validator is always required to issue a judgment on the work-report. In the second case, a new special-purpose \textsc{vrf} must be constructed to determine if an audit and judgment is warranted from us.
+New tranches may contain items from $\local¬reports$ stemming from one of two reasons: either a negative judgment has been received; or the number of judgments from the previous tranche is less than the number of announcements from said tranche. In the first case, the validator is always required to issue a judgment on the work-report. In the second case, a new special-purpose \textsc{vrf} must be constructed to determine if an audit and judgment is warranted from us.
 
 In all cases, we publish a signed statement of which of the cores we believe we are required to audit (an \emph{announcement}) together with evidence of the \textsc{vrf} signature to select them and the other validators' announcements from the previous tranche unmatched with a judgment in order that all other validators are capable of verifying the announcement. \emph{Publication of an announcement should be taken as a contract to complete the audit regardless of any future information.}
 
-Formally, for each tranche $n$ we ensure the announcement statement is published and distributed to all other validators along with our validator index $v$, evidence $s_n$ and all signed data. Validator's announcement statements must be in the set $S$:
+Formally, for each tranche $n$ we ensure the announcement statement is published and distributed to all other validators along with our validator index $v$, evidence $\local¬seed\sub{n}$ and all signed data. Validator's announcement statements must be in the set $S$:
 \begin{align}
-  S &\equiv \sig{\activeset[v]_\vk¬ed}{\mathsf{X}_I \append n \concat \mathbf{x}_n \concat \blake(\H)} \\
-  \where \mathbf{x}_n &= \se([\se_2(c) \concat \blake(w) \mid \tup{c, w} \in \mathbf{a}_n])\\
+  S &\equiv \sig{\activeset\subb{v}_\vk¬ed}{\mathsf{X}_I \append n \concat \mathbf{x}\sub{n} \concat \blake{\H}} \\
+  \where \mathbf{x}\sub{n} &= \encode{\set{\build{\fixedencode{2}{\cX} \concat \blake{\wrX}}{\wrcX \in \local¬tranche\sub{n}}}}\\
   \mathsf{X}_I &= \token{\$jam\_announce}
 \end{align}
 
-We define $A_n$ as our perception of which validator is required to audit each of the work-reports (identified by their associated core) at tranche $n$. This comes from each other validators' announcements (defined above). It cannot be correctly evaluated until $n$ is current. We have absolute knowledge about our own audit requirements.
+We define $A\sub{n}$ as our perception of which validator is required to audit each of the work-reports (identified by their associated core) at tranche $n$. This comes from each other validators' announcements (defined above). It cannot be correctly evaluated until $n$ is current. We have absolute knowledge about our own audit requirements.
 \begin{align}
-  A_n: \workreport &\to \protoset{\valindex} \\
-  \forall (c, w) &\in \mathbf{a}_0 : v \in q_0(w)
+  A\sub{n}: \workreport &\to \protoset{\valindex} \\
+%  \forall \tup{\cX, \wrX} &\in \local¬tranche\sub{0} : v \in q\sub{0}(\wrX)
+  % TODO: ^^^ Fix this.
 \end{align}
 
 We further define $J_\top$ and $J_\bot$ to be the validator indices who we know to have made respectively, positive and negative, judgments mapped from each work-report's core. We don't care from which tranche a judgment is made.
@@ -85,36 +87,36 @@ We further define $J_\top$ and $J_\bot$ to be the validator indices who we know 
   J_\bool: \workreport \to \protoset{\valindex}
 \end{align}
 
-We are able to define $\mathbf{a}_n$ for tranches beyond the first on the basis of the number of validators who we know are required to conduct an audit yet from whom we have not yet seen a judgment. It is possible that the late arrival of information alters $\mathbf{a}_n$ and nodes should reevaluate and act accordingly should this happen.
+We are able to define $\local¬tranche\sub{n}$ for tranches beyond the first on the basis of the number of validators who we know are required to conduct an audit yet from whom we have not yet seen a judgment. It is possible that the late arrival of information alters $\local¬tranche\sub{n}$ and nodes should reevaluate and act accordingly should this happen.
 
-We can thus define $\mathbf{a}_n$ beyond the initial tranche through a new \textsc{vrf} which acts upon the set of \emph{no-show} validators.
+We can thus define $\local¬tranche\sub{n}$ beyond the initial tranche through a new \textsc{vrf} which acts upon the set of \emph{no-show} validators.
 \begin{align}
   \nonumber\forall n > 0:&\\
-  \ s_n(w) &\in \bandersig{\activeset[v]_\vk¬bs}{\mathsf{X}_U \concat \Fbanderout{\H_\¬vrfsig}\concat\blake(w)\append n}{[]} \\
-  \ \mathbf{a}_n &\equiv \set{ \build{ w }{\textstyle\frac{\valcount}{256\mathsf{F}}\Fbanderout{s_n(w)}_0 < m_n, w \in \auditreports, w \ne \none }}\!\!\!\!\\
-  \nonumber \where m_n &= \len{A_{n - 1}(w) \setminus J_\top(w)}
+  \ \local¬seed\sub{n}(\wrX) &\in \bandersig{\activeset[v]_\vk¬bs}{\mathsf{X}_U \concat \banderout{\H_\¬vrfsig}\concat\blake{\wrX}\append n}{[]} \\
+  \ \local¬tranche\sub{n} &\equiv \set{ \build{ \wrX }{\textstyle\frac{\valcount}{256\mathsf{F}}\banderout{\local¬seed\sub{n}(\wrX)}\sub{0} < m\sub{n}, \wrX \in \local¬reports, \wrX \ne \none }}\!\!\!\!\\
+  \nonumber \where m\sub{n} &= \len{A_{n - 1}(\wrX) \setminus J_\top(\wrX)}
 \end{align}
 
 We define our bias factor $\mathsf{F} = 2$, which is the expected number of validators which will be required to issue a judgment for a work-report given a single no-show in the tranche before. Modeling by \cite{cryptoeprint:2024/961} shows that this is optimal.
 
 Later audits must be announced in a similar fashion to the first. If audit requirements lessen on the receipt of new information (\ie a positive judgment being returned for a previous \emph{no-show}), then any audits already announced are completed and judgments published. If audit requirements raise on the receipt of new information (\ie an additional announcement being found without an accompanying judgment), then we announce the additional audit(s) we will undertake.
 
-As $n$ increases with the passage of time $\mathbf{a}_n$ becomes known and defines our auditing responsibilities. We must attempt to reconstruct all work-packages and their requisite data corresponding to each work-report we must audit. This may be done through requesting erasure-coded chunks from one-third of the validators. It may also be short-cutted by asking a cooperative third party (\eg an original guarantor) for the preimages.
+As $n$ increases with the passage of time $\local¬tranche\sub{n}$ becomes known and defines our auditing responsibilities. We must attempt to reconstruct all work-packages and their requisite data corresponding to each work-report we must audit. This may be done through requesting erasure-coded chunks from one-third of the validators. It may also be short-cutted by asking a cooperative third party (\eg an original guarantor) for the preimages.
 
-Thus, for any such work-report $w$ we are assured we will be able to fetch some candidate work-package encoding $F(w)$ which comes either from reconstructing erasure-coded chunks verified through the erasure coding's Merkle root, or alternatively from the preimage of the work-package hash. We decode this candidate blob into a work-package.
+Thus, for any such work-report $\wrX$ we are assured we will be able to fetch some candidate work-package encoding $F(\wrX)$ which comes either from reconstructing erasure-coded chunks verified through the erasure coding's Merkle root, or alternatively from the preimage of the work-package hash. We decode this candidate blob into a work-package.
 
 In addition to the work-package, we also assume we are able to fetch all manifest data associated with it through requesting and reconstructing erasure-coded chunks from one-third of validators in the same way as above.
 
-We then attempt to reproduce the report on the core to give $e_n$, a mapping from cores to evaluations: \vskip -7pt
+We then attempt to reproduce the report on the core to give $e\sub{n}$, a mapping from cores to evaluations: \vskip -7pt
 \begin{equation}
   \begin{aligned}
-  %  \forall (c, w) \in \mathbf{a}_n \!: e_n(w) \!\Leftrightarrow\! \begin{cases}
-  %    w = \computedigest(p, c)\!\!\!\!\! &\when \exists p \in \workpackage: \se(p) = F(w) \\
+  %  \forall \tup{\cX, \wrX} \in \local¬tranche\sub{n} \!: e\sub{n}(\wrX) \!\Leftrightarrow\! \begin{cases}
+  %    \wrX = \computereport(p, \cX)\!\!\!\!\! &\when \exists p \in \workpackage: \encode{p} = F(\wrX) \\
   %    \bot &\otherwise
   %  \end{cases}
-    \forall (c, w) \in \mathbf{a}_n :\ \ &\\[-10pt]
-    e_n(w) \Leftrightarrow &\begin{cases}
-      w = \computedigest(p, c)\!\!\! &\when \exists p \in \workpackage: \se(p) = F(w) \\
+    \forall \tup{\cX, \wrX} \in \local¬tranche\sub{n} :\ \ &\\[-10pt]
+    e\sub{n}(\cX) \Leftrightarrow &\begin{cases}
+      \wrX = \computereport(p, \cX)\!\!\! &\when \exists p \in \workpackage: \encode{p} = F(\wrX) \\
       \bot &\otherwise
     \end{cases}
   \end{aligned}\!\!
@@ -122,17 +124,17 @@ We then attempt to reproduce the report on the core to give $e_n$, a mapping fro
 
 Note that a failure to decode implies an invalid work-report.
 
-From this mapping the validator issues a set of judgments $\mathbf{j}_n$:
+From this mapping the validator issues a set of judgments $\mathbf{j}\sub{n}$:
 \begin{align}
-  \mathbf{j}_n &= \set{\build{\signdata{\activeset[v]_\vk¬ed}{\mathsf{X}_{e(w)} \concat \blake(w)}}{(c, w) \in \mathbf{a}_n}}
+  \mathbf{j}\sub{n} &= \set{\build{\signdata{\activeset\subb{v}_\vk¬ed}{\mathsf{X}_{e\sub{n}(\cX)} \concat \blake{\wrX}}}{\tup{\cX, \wrX} \in \local¬tranche\sub{n}}}
 \end{align}
 
-%We denote the guarantors of a work-package $w$ as $\guarantorassignments(w)$ from a particular chain head, and this may be derived from the guarantees extrinsic $\xtguarantees$ of the ancestor block which introduced the work-report. Our restrictions on the guarantees extrinsic (described in section \ref{sec:accumulation}) ensures that this is unique.
+%We denote the guarantors of a work-package $\wrX$ as $\guarantorassignments(\wrX)$ from a particular chain head, and this may be derived from the guarantees extrinsic $\xtguarantees$ of the ancestor block which introduced the work-report. Our restrictions on the guarantees extrinsic (described in section \ref{sec:accumulation}) ensures that this is unique.
 %\begin{equation}
 %\begin{aligned}
-%    \guarantorassignments(w) &\equiv [ v \mid (s, v) \orderedin a ] \\
-%    \where (c, w, a) &\in \xtguarantees \\
-%    (\H, \mathbf{E}) &\in \ancestors
+%    \guarantorassignments(\wrX) &\equiv \sq{\build{v}{\tup{s, v} \orderedin a}} \\
+%    \where \tup{\cX, \wrX, a} &\in \xtguarantees \\
+%    \tup{\H, \mathbf{E}} &\in \ancestors
 %\end{aligned}
 %\end{equation}
 
@@ -140,16 +142,15 @@ All judgments $\mathbf{j}_*$ should be published to other validators in order th
 
 We consider a work-report as audited under two circumstances. Either, when it has no negative judgments and there exists some tranche in which we see a positive judgment from all validators who we believe are required to audit it; or when we see positive judgments for it from greater than two-thirds of the validator set.
 \begin{align}
-%  U(w) &\Leftrightarrow J_\bot(w) = \emptyset \wedge \exists n : A_n(w) \subset J_\top(w) \vee |J_\top(w)| > \twothirds\valcount%\!\!\!\!\!\!\!\!\!\!\!\!\!\!
-  U(w) &\Leftrightarrow \bigvee\,\abracegroup[\,]{
-    &J_\bot(w) = \emptyset \wedge \exists n : A_n(w) \subset J_\top(w) \\
-    &|J_\top(w)| > \twothirds\valcount
+  U(\wrX) &\Leftrightarrow \bigvee\,\abracegroup[\,]{
+    &J_\bot(\wrX) = \emptyset \wedge \exists n : A\sub{n}(\wrX) \subset J_\top(\wrX) \\
+    &|J_\top(\wrX)| > \twothirds\valcount
   }
 \end{align}
 
 Our block $\block$ may be considered audited, a condition denoted $\isaudited$, when all the work-reports which were made available are considered audited. Formally:
 \begin{align}
-  \isaudited &\Leftrightarrow \forall w \in \justbecameavailable : U(w)
+  \isaudited &\Leftrightarrow \forall \wrX \in \justbecameavailable : U(\wrX)
 \end{align}
 
 For any block we must judge it to be audited (\ie $\isaudited = \top$) before we vote for the block to be finalized in \textsc{Grandpa}. See section \ref{sec:grandpa} for more information here.
