--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -31,14 +31,14 @@
   \begin{description}
     \item[$\dict{K}{V}$] The set of dictionaries making a partial bijection of domain $k$ to range $v$. See section \ref{sec:dictionaries}.
   \end{description}
-  \item[$\sig{k}{m}$] The set of valid Ed25519 signatures of the key $k$ and message $m$. A subset of $\blob_{64}$. See section \ref{sec:cryptography}.
-  \item[$\bandersig{k}{c}{m}$] The set of Bandersnatch signatures of the public key $k$, context $c$ and message $m$. A subset of $\blob_{64}$. See section \ref{sec:cryptography}. \emph{NOTE: Not used as finite fields.}
+  \item[$\sig{k}{m}$] The set of valid Ed25519 signatures of the key $k$ and message $m$. A subset of $\bloboflen{64}$. See section \ref{sec:cryptography}.
+  \item[$\bandersig{k}{c}{m}$] The set of Bandersnatch signatures of the public key $k$, context $c$ and message $m$. A subset of $\bloboflen{64}$. See section \ref{sec:cryptography}. \emph{NOTE: Not used as finite fields.}
   \item[$\bandersnatch{r}{c}{m}$] The set of Bandersnatch Ring\textsc{vrf} proofs of the root $r$, context $c$ and message $m$. See section \ref{sec:cryptography}.
   \item[$\segment$] The set of data segments, equivalent to octet sequences of length $\mathsf{W}_G$. See equation \ref{eq:segment}.
-  \item[$\hash$] The set of 32-octet cryptographic values. A subset of $\blob_{32}$. $\hash$ without a subscript generally implies a hash function result. See section \ref{sec:cryptography}. \emph{NOTE: Not used as quaternions.}
+  \item[$\hash$] The set of 32-octet cryptographic values. A subset of $\bloboflen{32}$. $\hash$ without a subscript generally implies a hash function result. See section \ref{sec:cryptography}. \emph{NOTE: Not used as quaternions.}
   \begin{description}
-    \item[$\bskey$] The set of Bandersnatch public keys. A subset of $\blob_{32}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
-    \item[$\edkey$] The set of Ed25519 public keys. A subset of $\blob_{32}$. See section \ref{sec:signing}.
+    \item[$\bskey$] The set of Bandersnatch public keys. A subset of $\bloboflen{32}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
+    \item[$\edkey$] The set of Ed25519 public keys. A subset of $\bloboflen{32}$. See section \ref{sec:signing}.
   \end{description}
   \item[$\workitem$] The set of work items. See equation \ref{eq:workitem}.
   \item[$\workerror$] The set of work execution errors.
@@ -56,8 +56,8 @@
   \item[$\workcontext$] The set of refinement contexts.
   \item[$\blob$] The set of octet strings/``blobs''. Subscript denotes length. See section \ref{sec:sequences}.
   \begin{description}
-    \item[$\blskey$] The set of \textsc{bls} public keys. A subset of $\blob_{144}$. See section \ref{sec:signing}.
-    \item[$\ringroot$] The set of Bandersnatch ring roots. A subset of $\blob_{144}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
+    \item[$\blskey$] The set of \textsc{bls} public keys. A subset of $\bloboflen{144}$. See section \ref{sec:signing}.
+    \item[$\ringroot$] The set of Bandersnatch ring roots. A subset of $\bloboflen{144}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \end{description}
 \end{description}
 
@@ -74,7 +74,7 @@
 %  \item[$\gascounter$] Unused. %	Θ
 %  \item[$\Pi$] Unused. %	Π
   \item[$\histlookup$] The historical lookup function. See equation \ref{eq:historicallookup}. % Λ
-  \item[$\computedigest$] The work-digest computation function. See equation \ref{eq:workdigestfunction}. %	Ξ
+  \item[$\computereport$] The work-report computation function. See equation \ref{eq:workdigestfunction}. %	Ξ
   \item[$\transitionstate$] The general state transition function. See equations \ref{eq:statetransition}, \ref{eq:transitionfunctioncomposition}. %	ϒ
 %  \item[$\Sigma$] Unused. %	Σ
   \item[$\Phi$] The key-nullifier function. See equation \ref{eq:blacklistfilter}. %	Φ
@@ -123,35 +123,35 @@
 \subsection{Utilities, Externalities and Standard Functions}
 
 \begin{description}
-  \item[$\mmrappend(\dots)$] The Merkle mountain range append function. See equation \ref{eq:mmrappend}.
-  \item[$\octetstobits_n(\dots)$] The octets-to-bits function for $n$ octets. Superscripted ${}^{-1}$ to denote the inverse. See equation \ref{eq:bitsfunc}.
-  \item[$\erasurecode(\dots)$] The group of erasure-coding functions.
-  \item[$\erasurecode_n(\dots)$] The erasure-coding functions for $n$ chunks. See equation \ref{eq:erasurecoding}.
+  \item[$\fnmmrappend(\dots)$] The Merkle mountain range append function. See equation \ref{eq:mmrappend}.
+  \item[$\fnoctetstobits\sub{n}(\dots)$] The octets-to-bits function for $n$ octets. Superscripted ${}^{-1}$ to denote the inverse. See equation \ref{eq:bitsfunc}.
+  \item[$\fnerasurecode(\dots)$] The group of erasure-coding functions.
+  \item[$\fnerasurecode\sub{n}(\dots)$] The erasure-coding functions for $n$ chunks. See equation \ref{eq:erasurecoding}.
 %  \item[$\mathcal{D}$] Unused.
-  \item[$\se(\dots)$] The octet-sequence encode function. Superscripted ${}^{-1}$ to denote the inverse. See appendix \ref{sec:serialization}.
-  \item[$\fyshuffle(\dots)$] The Fisher-Yates shuffle function. See equation \ref{eq:suffle}.
-  \item[$\blake(\dots)$] The Blake 2b 256-bit hash function. See section \ref{sec:cryptography}.
-  \item[$\keccak(\dots)$] The Keccak 256-bit hash function. See section \ref{sec:cryptography}.
+  \item[$\encode{\dots}$] The octet-sequence encode function. Superscripted ${}^{-1}$ to denote the inverse. See appendix \ref{sec:serialization}.
+  \item[$\fnfyshuffle(\dots)$] The Fisher-Yates shuffle function. See equation \ref{eq:suffle}.
+  \item[$\blake{\dots}$] The Blake 2b 256-bit hash function. See section \ref{sec:cryptography}.
+  \item[$\keccak{\dots}$] The Keccak 256-bit hash function. See section \ref{sec:cryptography}.
   %  \item[$\mathcal{G}$] Unused.
   %  \item[$\mathcal{I}$] Unused.
-  \item[$\merklejustsubpath_x$] The justification path to a specific $2^x$ size page of a constant-depth Merkle tree. See equation \ref{eq:constantdepthsubtreemerklejust}.
-  \item[$\keys(\dots)$] The domain, or set of keys, of a dictionary. See section \ref{sec:dictionaries}.
-  \item[$\merklesubtreepage_x$] The $2^x$ size page function for a constant-depth Merkle tree. See equation \ref{eq:constantdepthsubtreemerkleleafpage}.
-  \item[$\merklizecd(\dots)$] The constant-depth binary Merklization function. See appendix \ref{sec:merklization}.
-  \item[$\merklizewb(\dots)$] The well-balanced binary Merklization function. See appendix \ref{sec:merklization}.
-  \item[$\merklizestate(\dots)$] The state Merklization function. See appendix \ref{sec:statemerklization}.
+  \item[$\fnmerklejustsubpath{x}$] The justification path to a specific $2^x$ size page of a constant-depth Merkle tree. See equation \ref{eq:constantdepthsubtreemerklejust}.
+  \item[$\keys{\dots}$] The domain, or set of keys, of a dictionary. See section \ref{sec:dictionaries}.
+  \item[$\fnmerklesubtreepage{x}$] The $2^x$ size page function for a constant-depth Merkle tree. See equation \ref{eq:constantdepthsubtreemerkleleafpage}.
+  \item[$\merklizecd{\dots}$] The constant-depth binary Merklization function. See appendix \ref{sec:merklization}.
+  \item[$\merklizewb{\dots}$] The well-balanced binary Merklization function. See appendix \ref{sec:merklization}.
+  \item[$\merklizestate{\dots}$] The state Merklization function. See appendix \ref{sec:statemerklization}.
   %  \item[$\mathcal{N}$] Unused.
-  \item[$\getringroot(\dots)$] The Bandersnatch ring root function. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
-  \item[$\zeropad_n(\dots)$] The octet-array zero-padding function. See equation \ref{eq:zeropadding}.
-  \item[$\seqfromhash(\dots)$] The numeric-sequence-from-hash function. See equation \ref{eq:sequencefromhash}.
-  \item[$\ecrecover$] The group of erasure-coding piece-recovery functions.
-  \item[$\signdata_k(\dots)$] The general signature function. See section \ref{sec:cryptography}.
+  \item[$\getringroot{\dots}$] The Bandersnatch ring root function. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
+  \item[$\zeropad{n}{\dots}$] The octet-array zero-padding function. See equation \ref{eq:zeropadding}.
+  \item[$\seqfromhash{}{\dots}$] The numeric-sequence-from-hash function. See equation \ref{eq:sequencefromhash}.
+  \item[$\ecrecover{\dots}$] The group of erasure-coding piece-recovery functions.
+  \item[$\signdata{k}{\dots}$] The general signature function. See section \ref{sec:cryptography}.
   \item[$\wallclock$] The current time expressed in seconds after the start of the \Jam Common Era. See section \ref{sec:commonera}.
-  \item[$\subifnone(\dots)$] The substitute-if-nothing function. See equation \ref{eq:substituteifnothing}.
-  \item[$\values(\dots)$] The range, or set of values, of a dictionary or sequence. See section \ref{sec:dictionaries}.
-  \item[$\sext_n(\dots)$] The signed-extension function for a value in $\Nbits{8n}$. See equation \ref{eq:signedextension}.
-  \item[$\banderout(\dots)$] The alias/output/entropy function of a Bandersnatch \textsc{vrf} signature/proof. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
-  \item[$\tosigned_n(\dots)$] The into-signed function for a value in $\Nbits{8n}$. Superscripted with ${}^{-1}$ to denote the inverse. See equation \ref{eq:signedfunc}.
+  \item[$\subifnone{\dots}$] The substitute-if-nothing function. See equation \ref{eq:substituteifnothing}.
+  \item[$\values{\dots}$] The range, or set of values, of a dictionary or sequence. See section \ref{sec:dictionaries}.
+  \item[$\sext{n}{\dots}$] The signed-extension function for a value in $\Nbits{8n}$. See equation \ref{eq:signedextension}.
+  \item[$\banderout{\dots}$] The alias/output/entropy function of a Bandersnatch \textsc{vrf} signature/proof. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
+  \item[$\fntosigned{n}(\dots)$] The into-signed function for a value in $\Nbits{8n}$. Superscripted with ${}^{-1}$ to denote the inverse. See equation \ref{eq:signedfunc}.
 \end{description}
 
 \subsection{Values}
@@ -163,16 +163,15 @@ These terms are all contextualized to a single block. They may be superscripted 
   \item[$\ancestors$] The ancestor set of the block. See equation \ref{eq:ancestors}.
   \item[$\block$] The block. See equation \ref{eq:block}.
   \item[$\extrinsic$] The block extrinsic. See equation \ref{eq:extrinsic}.
-  \item[$\mathbf{F}_v$] The \textsc{Beefy} signed commitment of validator $v$. See equation \ref{eq:beefysignedcommitment}.
-  \item[$\guarantorassignments$] The mapping from cores to guarantor keys. See section \ref{sec:coresandvalidators}.
-  \item[$\mathbf{G^*}$] The mapping from cores to guarantor keys for the previous rotation. See section \ref{sec:coresandvalidators}.
+  \item[$\mathbf{F}\sub{v}$] The \textsc{Beefy} signed commitment of validator $v$. See equation \ref{eq:beefysignedcommitment}.
+  \item[$\reporters$] The set of Ed25519 guarantor keys who made a work-report. See equation \ref{eq:guarantorsig}.
   \item[$\header$] The block header. See equation \ref{eq:header}.
   \item[$\accumulationstatistics$] The sequence of work-reports which were accumulated this in this block. See equation \ref{eq:accumulatedreports}.
-  \item[$\reporters$] The set of Ed25519 guarantor keys who made a work-report. See equation \ref{eq:guarantorsig}.
-  \item[$\mathbf{S}$] The set of indices of services which have been accumulated (``progressed'') in the block. See equation \ref{eq:servicestoaccumulate}.
-  \item[$\mathbf{T}$] The ticketed condition, true if the block was sealed with a ticket signature rather than a fallback. See equations \ref{eq:ticketconditiontrue} and \ref{eq:ticketconditionfalse}.
-  \item[$\isaudited$] The audit condition, equal to $\top$ once the block is audited. See section \ref{sec:auditing}.
+  \item[$\guarantorassignments$] The mapping from cores to guarantor keys. See section \ref{sec:coresandvalidators}.
+  \item[$\guarantorassignmentsunderlastrotation$] The mapping from cores to guarantor keys for the previous rotation. See section \ref{sec:coresandvalidators}.
   \item[$\justbecameavailable$] The sequence of work-reports which have now become available and ready for accumulation. See equation \ref{eq:availableworkreports}.
+  \item[$\isticketed$] The ticketed condition, true if the block was sealed with a ticket signature rather than a fallback. See equations \ref{eq:ticketconditiontrue} and \ref{eq:ticketconditionfalse}.
+  \item[$\isaudited$] The audit condition, equal to $\top$ once the block is audited. See section \ref{sec:auditing}.
   \item[$\deferredtransfersstatistics$] The sequence of transfers implied by the block's accumulations. See equation \ref{eq:deferredtransfers}.\\
 \end{description}
 
@@ -263,7 +262,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{G}_A = 10,000,000$] The gas allocated to invoke a work-report's Accumulation logic.
   \item[$\mathsf{G}_I = 50,000,000$] The gas allocated to invoke a work-package's Is-Authorized logic.
   \item[$\mathsf{G}_R = 5,000,000,000$] The gas allocated to invoke a work-package's Refine logic.
-  \item[$\mathsf{G}_T = 3,500,000,000$] The total gas allocated across for all Accumulation. Should be no smaller than $\mathsf{G}_A\cdot\corecount + \sum_{g \in \Fvalues{\alwaysaccers}}(g)$.
+  \item[$\mathsf{G}_T = 3,500,000,000$] The total gas allocated across for all Accumulation. Should be no smaller than $\mathsf{G}_A\cdot\corecount + \sum_{g \in \values{\alwaysaccers}}(g)$.
   \item[$\mathsf{H} = 8$] The size of recent history, in blocks.
   \item[$\mathsf{I} = 16$] The maximum amount of work items in a package.
   \item[$\mathsf{J} = 8$] The maximum sum of dependency items in a work-report.
