--- a/text/safrole.tex
+++ b/text/safrole.tex
@@ -58,8 +58,8 @@ $\epochroot$ is the epoch's root, a Bandersnatch ring root composed with the one
 
 Finally, $\ticketaccumulator$ is the ticket accumulator, a series of highest-scoring ticket identifiers to be used for the next epoch. $\sealtickets$ is the current epoch's slot-sealer series, which is either a full complement of $\epochlen$ tickets or, in the case of a fallback mode, a series of $\epochlen$ Bandersnatch keys:
 \begin{align}
-  \ticketaccumulator \in \seq{\safroleticket}_{:\epochlen} \,,\quad
-  \sealtickets \in \seq{\safroleticket}_{\epochlen} \cup \seq{\bskey}_\epochlen
+  \ticketaccumulator \in \sequence{\safroleticket}_{:\epochlen} \,,\quad
+  \sealtickets \in \sequence{\safroleticket}_{\epochlen} \cup \sequence{\bskey}_\epochlen
 \end{align}
 
 Here, $\safroleticket$ is used to denote the set of \emph{tickets}, a combination of a verifiably random ticket identifier $\st¬id$ and the ticket's entry-index $\st¬entry$:
@@ -94,22 +94,28 @@ We must introduce $\valkey$, the set of validator key tuples. This is a combinat
 
 The set of validator keys itself is equivalent to the set of 336-octet sequences. However, for clarity, we divide the sequence into four easily denoted components. For any validator key $k$, the Bandersnatch key is denoted $k_\vk¬bs$, and is equivalent to the first 32-octets; the Ed25519 key, $k_\vk¬ed$, is the second 32 octets; the \textsc{bls} key denoted $k_\vk¬bls$ is equivalent to the following 144 octets, and finally the metadata $k_\vk¬metadata$ is the last 128 octets. Formally:
 \begin{align}
-  \valkey &\equiv \blob_{336} \\
-  \forall k \in \valkey : k_\vk¬bs \in \bskey &\equiv k_{0\dots+32} \\
-  \forall k \in \valkey : k_\vk¬ed \in \edkey &\equiv k_{32\dots+32} \\
-  \forall k \in \valkey : k_\vk¬bls \in \blskey &\equiv k_{64\dots+144} \\
-  \forall k \in \valkey : k_\vk¬metadata \in \metadatakey &\equiv k_{208\dots+128}
+  \valkey &\equiv \bloboflen{336} \\
+  \forall \vkX \in \valkey : \vkX_\vk¬bs \in \bskey &\equiv \vkX\subrange{0}{32} \\
+  \forall \vkX \in \valkey : \vkX_\vk¬ed \in \edkey &\equiv \vkX\subrange{32}{32} \\
+  \forall \vkX \in \valkey : \vkX_\vk¬bls \in \blskey &\equiv \vkX\subrange{64}{144} \\
+  \forall \vkX \in \valkey : \vkX_\vk¬metadata \in \metadatakey &\equiv \vkX\subrange{208}{128}
 \end{align}
 
 With a new epoch under regular conditions, validator keys get rotated and the epoch's Bandersnatch key root is updated into $\epochroot'$:
 \begin{align}
-  (\pendingset', \activeset', \previousset', \epochroot') &\equiv \begin{cases}
-    (\Phi(\stagingset), \pendingset, \activeset, z) &\when e' > e \\ (\pendingset, \activeset, \previousset, \epochroot) &\otherwise
+  \tup{\pendingset', \activeset', \previousset', \epochroot'} &\equiv \begin{cases}
+    (\Phi(\stagingset), \pendingset, \activeset, z) &\when e' > e \\ \tup{\pendingset, \activeset, \previousset, \epochroot} &\otherwise
   \end{cases} \\
-  \nonumber \where z &= \getringroot([k_b \mid k \orderedin \pendingset']) \\
+  \nonumber \where z &= \getringroot{\sq{\build{k_\vk¬bs}{k \orderedin \pendingset'}}} \\
   \label{eq:blacklistfilter} \Phi(\mathbf{k}) &\equiv \sq{
-    \begin{rcases}[0, 0, \dots] &\when k_e \in \offenders' \\ k &\otherwise \end{rcases}
-    \,\middle\mid\, k \orderedin \mathbf{k}
+    \build{
+      \begin{rcases}
+        \sq{0, 0, \dots} &\when \vkX_\vk¬ed \in \offenders' \\
+        \vkX &\otherwise
+      \end{rcases}
+    }{
+      \vkX \orderedin \mathbf{k}
+    }
   }
 \end{align}
 
@@ -127,18 +133,18 @@ The header must contain a valid seal and valid \textsc{vrf} output. These are tw
 \begin{align}
     \nonumber \using i = \cyclic{\safroleticket[\H_\¬timeslot]}\colon \\
     \label{eq:ticketconditiontrue}
-    \safroleticket \in \seq{\safroleticket} &\implies \abracegroup[\,]{
+    \safroleticket \in \sequence{\safroleticket} &\implies \abracegroup[\,]{
         &i_\st¬id = \banderout{\H_\¬sealsig}\,,\\
-        &\H_\¬sealsig \in \bandersig{\H_\¬authorbskey}{\mathsf{X}_T \concat \entropy'_3 \append i_\st¬entry}{\seunsignedheader(\H)}\,,\\
+        &\H_\¬sealsig \in \bandersig{\H_\¬authorbskey}{\mathsf{X}_T \concat \entropy'_3 \append i_\st¬entry}{\encodeunsignedheader{\H}}\,,\\
         &\isticketed = 1
     }\\
     \label{eq:ticketconditionfalse}
-    \safroleticket \in \seq{\bskey} &\implies \abracegroup[\,]{
+    \safroleticket \in \sequence{\bskey} &\implies \abracegroup[\,]{
         &i = \H_\¬authorbskey\,,\\
-        &\H_\¬sealsig \in \bandersig{\H_\¬authorbskey}{\mathsf{X}_F \concat \entropy'_3}{\seunsignedheader(\H)}\,,\\
+        &\H_\¬sealsig \in \bandersig{\H_\¬authorbskey}{\mathsf{X}_F \concat \entropy'_3}{\encodeunsignedheader{\H}}\,,\\
         &\isticketed = 0
     }\\
-  \H_\¬vrfsig &\in \bandersig{\H_\¬authorbskey}{\mathsf{X}_E\concat \banderout{\H_\¬sealsig}}{[]} \\
+  \H_\¬vrfsig &\in \bandersig{\H_\¬authorbskey}{\mathsf{X}_E \concat \banderout{\H_\¬sealsig}}{[]} \\
   \mathsf{X}_E &= \token{\$jam\_entropy}\\
   \mathsf{X}_F &= \token{\$jam\_fallback\_seal}\\
   \mathsf{X}_T &= \token{\$jam\_ticket\_seal}
@@ -148,19 +154,19 @@ Sealing using the ticket is of greater security, and we utilize this knowledge w
 
 In addition to the entropy accumulator $\entropyaccumulator$, we retain three additional historical values of the accumulator at the point of each of the three most recently ended epochs, $\entropy_1$, $\entropy_2$ and $\entropy_3$. The second-oldest of these $\entropy_2$ is utilized to help ensure future entropy is unbiased (see equation \ref{eq:ticketsextrinsic}) and seed the fallback seal-key generation function with randomness (see equation \ref{eq:slotkeysequence}). The oldest is used to regenerate this randomness when verifying the seal above (see equations \ref{eq:ticketconditionfalse} and \ref{eq:ticketconditiontrue}).
 \begin{align}\label{eq:entropycomposition}
-  \entropy &\in \seq{\hash}_4
+  \entropy &\in \sequence{\hash}_4
 \end{align}
 
 $\entropyaccumulator$ defines the state of the randomness accumulator to which the provably random output of the \textsc{vrf}, the signature over some unbiasable input, is combined each block. $\entropy_1$, $\entropy_2$ and $\entropy_3$ meanwhile retain the state of this accumulator at the end of the three most recently ended epochs in order.
 \begin{align}
-  \entropyaccumulator' &\equiv \blake(\entropyaccumulator \concat \banderout{\H_\¬vrfsig})
+  \entropyaccumulator' &\equiv \blake{\entropyaccumulator \concat \banderout{\H_\¬vrfsig}}
 \end{align}
 
 On an epoch transition (identified as the condition $e' > e$), we therefore rotate the accumulator value into the history $\entropy_1$, $\entropy_2$ and $\entropy_3$:
 \begin{align}
-  (\entropy'_1, \entropy'_2, \entropy'_3) &\equiv \begin{cases}
-    (\entropy_0, \entropy_1, \entropy_2) &\when e' > e \\
-    (\entropy_1, \entropy_2, \entropy_3) &\otherwise
+  \tup{\entropy'_1, \entropy'_2, \entropy'_3} &\equiv \begin{cases}
+    \tup{\entropy_0, \entropy_1, \entropy_2} &\when e' > e \\
+    \tup{\entropy_1, \entropy_2, \entropy_3} &\otherwise
   \end{cases}
 \end{align}
 
@@ -189,19 +195,20 @@ The posterior slot key sequence $\safroleticket$ is one of three expressions dep
 Here, we use $Z$ as the outside-in sequencer function, defined as follows:
 \begin{equation}
   Z\colon\abracegroup[\,]{
-    \seq{\safroleticket}_\epochlen &\to \seq{\safroleticket}_\epochlen\\
-    \mathbf{s} &\mapsto [\mathbf{s}_0, \mathbf{s}_{\len{\mathbf{s}} - 1}, \mathbf{s}_1, \mathbf{s}_{\len{\mathbf{s}} - 2}, \dots]\\
+    \sequence{\safroleticket}_\epochlen &\to \sequence{\safroleticket}_\epochlen\\
+    \mathbf{s} &\mapsto \sq{\mathbf{s}_0, \mathbf{s}_{\len{\mathbf{s}} - 1}, \mathbf{s}_1, \mathbf{s}_{\len{\mathbf{s}} - 2}, \dots}\\
   }
 \end{equation}
 
-Finally, $F$ is the fallback key sequence function which selects an epoch's worth of validator Bandersnatch keys ($\seq{\bskey}_{\epochlen}$) from the validator key set $\mathbf{k}$ using the entropy collected on-chain $r$:
+Finally, $F$ is the fallback key sequence function which selects an epoch's worth of validator Bandersnatch keys ($\sequence{\bskey}_{\epochlen}$) from the validator key set $\mathbf{k}$ using the entropy collected on-chain $r$:
 \begin{equation}\label{eq:fallbackkeysequence}
   F\colon \abracegroup[\ ]{
-    \tuple{\hash,\,\seq{\valkey}} &\to \seq{\bskey}_\epochlen\\
-    \tup{r,\, \mathbf{k}} &\mapsto \left[
-    \cyclic{\mathbf{k}[\de(\blake_4(r \concat \mathcal{E}_4(i)))]}_\vk¬bs
-    \middle\vert\; i \in \epochindex
-    \right]
+    \tuple{\hash,\,\sequence{\valkey}} &\to \sequenceoflen{\bskey}{\epochlen}\\
+    \tup{r,\, \mathbf{k}} &\mapsto \sq{\build{
+      \cyclic{\mathbf{k}\sub{\decode{\blakeprefix{4}{r \concat \fixedencode{4}{i}}}}}_\vk¬bs
+    }{
+      i \in \epochindex
+    }}
   }\!\!\!
 \end{equation}
 
@@ -256,9 +263,9 @@ Towards the end of the epoch (\ie $\mathsf{Y}$ slots from the start) this contes
 
 We define the extrinsic as a sequence of proofs of valid tickets, each of which is a tuple of an entry index (a natural number less than $\ticketentries$) and a proof of ticket validity. Formally:
 \begin{align}\label{eq:ticketsextrinsic}
-  \xttickets &\in \seq{\tuple{
-    \isa{r}{\N_{\ticketentries}},\,
-    \isa{p}{\bandersnatch{\epochroot'}{\mathsf{X}_T \concat \entropy'_2 \append r}{[]}}
+  \xttickets &\in \sequence{\tuple{
+    \isa{\xt¬entry}{\Nmax{\ticketentries}},\,
+    \isa{\xt¬proof}{\bandersnatch{\epochroot'}{\mathsf{X}_T \concat \entropy'_2 \append \xt¬entry}{\sq{}}}
   }} \\
   \len{\xttickets} &\le \begin{cases}
       \mathsf{K} &\when m' < \mathsf{Y} \\
@@ -270,22 +277,22 @@ We define $\mathbf{n}$ as the set of new tickets, with the ticket identifier, a 
 \begin{align}
   \mathbf{n} &\equiv \sq{
     \tup{
-      \is{\mathbf{y}}{\banderout{i_p}},\,
-      \is{r}{i_\st¬entry}
+      \is{\st¬id}{\banderout{i_\xt¬proof}},\,
+      \is{\st¬entry}{i_\st¬entry}
     } \mid i \orderedin \xttickets
   }
 \end{align}
 
 The tickets submitted via the extrinsic must already have been placed in order of their implied identifier. Duplicate identifiers are never allowed lest a validator submit the same ticket multiple times:
 \begin{align}
-  \mathbf{n} &= \orderuniqby{x_\st¬id}{x \in \mathbf{n}} \\
+  \mathbf{n} &= \sqorderuniqby{x_\st¬id}{x \in \mathbf{n}} \\
   \set{ x_\st¬id \mid x \in \mathbf{n} } &\disjoint \set{ x_\st¬id \mid x \in \ticketaccumulator }
 \end{align}
 
 The new ticket accumulator $\ticketaccumulator'$ is constructed by merging new tickets into the previous accumulator value (or the empty sequence if it is a new epoch):
 \begin{equation}
   \begin{aligned}
-    \ticketaccumulator' &\equiv  {\overrightarrow{\orderby{x_\st¬id}{x \in \mathbf{n} \cup \begin{cases} \none\ &\when e' > e \\ \ticketaccumulator\ &\otherwise \end{cases}}~}}^\epochlen \\
+    \ticketaccumulator' &\equiv  {\overrightarrow{\sqorderby{x_\st¬id}{x \in \mathbf{n} \cup \begin{cases} \none\ &\when e' > e \\ \ticketaccumulator\ &\otherwise \end{cases}}~}}^\epochlen \\
   \end{aligned}
 \end{equation}
 
@@ -294,4 +301,4 @@ The maximum size of the ticket accumulator is $\epochlen$. On each block, the ac
   \mathbf{n} \subseteq \ticketaccumulator'
 \end{align}
 
-Note that it can be shown that in the case of an empty extrinsic $\xttickets = []$, as implied by $m' \ge \mathsf{Y}$, and unchanged epoch ($e' = e$), then $\ticketaccumulator' = \ticketaccumulator$.
+Note that it can be shown that in the case of an empty extrinsic $\xttickets = \sq{}$, as implied by $m' \ge \mathsf{Y}$, and unchanged epoch ($e' = e$), then $\ticketaccumulator' = \ticketaccumulator$.
